feat: stagging from deb-pkg on ubuntu archive
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,25 +22,16 @@ parts:
     source: .
     plugin: nil
     build-packages:
-      - jq
-      - curl
       - git
+      - stress-ng
     override-build: |
       craftctl default
-      craftctl set version=$(curl -s https://api.github.com/repos/ColinIanKing/stress-ng/tags | jq -r '.[0].name')+$(git rev-parse --short HEAD)
+      craftctl set version=$(stress-ng --version | cut -d ' ' -f 3)+$(git rev-parse --short HEAD)
 
   stress-ng:
-    source: https://github.com/ColinIanKing/stress-ng.git
-    plugin: make
-    make-parameters: ["-j$(nproc)"]
-    build-packages:
-      - build-essential
-      - make
-      - git
-      - jq
-    override-pull: |
-      craftctl default
-      git checkout $(curl -s https://api.github.com/repos/ColinIanKing/stress-ng/tags | jq -r '.[0].name')
+    plugin: nil
+    stage-packages:
+      - stress-ng
 
 apps:
   stress-ng:
